--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Noto Sans', sans-serif;
+  overflow-x: hidden;
+}
+
 header {
   height: 56px;
 }
@@ -9,6 +14,36 @@ main > .container-fluid {
 
 footer > .container-fluid {
   padding-top: 112px;
+}
+
+.form-control:focus {
+  outline: 0 !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.btn:focus {
+  outline: 0 !important;
+}
+
+.zoom {
+  -webkit-transition: -webkit-transform .25s;
+  transition: -webkit-transform .25s;
+  transition: transform .25s;
+  transition: transform .25s, -webkit-transform .25s;
+}
+
+.zoom:hover {
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -98,7 +133,7 @@ footer > .container-fluid {
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
