--- a/style/main.sass
+++ b/style/main.sass
@@ -1,3 +1,7 @@
+body
+    font-family: 'Noto Sans', sans-serif;
+    overflow-x: hidden;
+
 header
     height: 56px;
 
@@ -7,6 +11,26 @@ main>.container-fluid
 
 footer > .container-fluid
   padding-top: 112px;
+
+.form-control:focus
+    outline: 0 !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+
+.btn:focus
+    outline: 0 !important;
+
+.zoom
+    transition: transform .25s;
+
+.zoom:hover
+    transform: scale(1.25);
+
+.clickable
+    cursor: pointer;
+
+.text-justify
+    text-align: justify;
 
 /* The actual timeline (the vertical ruler) */
 .timeline 
@@ -95,7 +119,7 @@ footer > .container-fluid
 
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) 
+@media screen and (max-width: 800px) 
 
     /* Place the timelime to the left */
     .timeline::after 
