--- a/style/main.sass
+++ b/style/main.sass
@@ -32,6 +32,13 @@ footer > .container-fluid
 .text-justify
     text-align: justify;
 
+.portfolio-img
+    transition: .25s;
+
+.portfolio-img:hover
+    cursor: pointer;
+    transform: scale(1.1);
+
 /* The actual timeline (the vertical ruler) */
 .timeline 
     position: relative;
