--- a/style/main.css
+++ b/style/main.css
@@ -57,6 +57,10 @@ footer > .container-fluid {
           transform: scale(1.1);
 }
 
+.blockquote-footer {
+  margin-bottom: 0;
+}
+
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
@@ -150,13 +154,13 @@ footer > .container-fluid {
     left: 31px;
   }
   /* Full-width containers */
-  .container {
+  .timeline-container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
   /* Make sure that all arrows are pointing leftwards */
-  .container::before {
+  .timeline-container::before {
     left: 60px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
@@ -165,7 +169,7 @@ footer > .container-fluid {
   /* Make sure all circles are at the same spot */
   .timeline-left::after,
   .timeline-right::after {
-    left: 15px;
+    left: 8px;
   }
   /* Make all right containers behave like the left ones */
   .timeline-right {
