--- a/style/main.sass
+++ b/style/main.sass
@@ -39,6 +39,9 @@ footer > .container-fluid
     cursor: pointer;
     transform: scale(1.1);
 
+.blockquote-footer
+    margin-bottom: 0;
+
 /* The actual timeline (the vertical ruler) */
 .timeline 
     position: relative;
@@ -134,14 +137,14 @@ footer > .container-fluid
     
 
     /* Full-width containers */
-    .container 
+    .timeline-container 
         width: 100%;
         padding-left: 70px;
         padding-right: 25px;
     
 
     /* Make sure that all arrows are pointing leftwards */
-    .container::before 
+    .timeline-container::before 
         left: 60px;
         border: medium solid white;
         border-width: 10px 10px 10px 0;
@@ -151,7 +154,7 @@ footer > .container-fluid
     /* Make sure all circles are at the same spot */
     .timeline-left::after,
     .timeline-right::after 
-        left: 15px;
+        left: 8px;
     
 
     /* Make all right containers behave like the left ones */
