--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
   overflow-x: hidden;
 }
 
@@ -18,7 +18,6 @@ footer > .container-fluid {
 
 .form-control:focus {
   outline: 0 !important;
-  -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
 
@@ -27,15 +26,11 @@ footer > .container-fluid {
 }
 
 .zoom {
-  -webkit-transition: -webkit-transform .25s;
-  transition: -webkit-transform .25s;
-  transition: transform .25s;
-  transition: transform .25s, -webkit-transform .25s;
+  transition: transform 0.25s;
 }
 
 .zoom:hover {
-  -webkit-transform: scale(1.25);
-          transform: scale(1.25);
+  transform: scale(1.25);
 }
 
 .clickable {
@@ -47,14 +42,12 @@ footer > .container-fluid {
 }
 
 .portfolio-img {
-  -webkit-transition: .25s;
-  transition: .25s;
+  transition: 0.25s;
 }
 
 .portfolio-img:hover {
   cursor: pointer;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .blockquote-footer {
@@ -64,11 +57,13 @@ footer > .container-fluid {
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
+  /* The actual timeline (the vertical ruler) */
+  /* Container around content */
+  /* Place the container to the left */
+  /* Place the container to the right */
 }
-
-/* The actual timeline (the vertical ruler) */
 .timeline::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 6px;
   background-color: white;
@@ -77,18 +72,15 @@ footer > .container-fluid {
   left: 50%;
   margin-left: -3px;
 }
-
-/* Container around content */
 .timeline-container {
   padding: 10px 40px;
   position: relative;
   background-color: inherit;
   width: 50%;
+  /* The circles on the timeline */
 }
-
-/* The circles on the timeline */
 .timeline-container::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 24px;
   height: 24px;
@@ -98,18 +90,10 @@ footer > .container-fluid {
   border-radius: 50%;
   z-index: 1;
 }
-
-/* Place the container to the left */
 .timeline-left {
   left: 0;
+  /* Add arrows to the left container (pointing right) */
 }
-
-/* Place the container to the right */
-.timeline-right {
-  left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
 .timeline-left::before {
   content: " ";
   height: 0;
@@ -121,8 +105,11 @@ footer > .container-fluid {
   border-width: 10px 0 10px 10px;
   border-color: transparent transparent transparent white;
 }
-
-/* Add arrows to the right container (pointing left) */
+.timeline-right {
+  left: 50%;
+  /* Add arrows to the right container (pointing left) */
+  /* Fix the circle for containers on the right side */
+}
 .timeline-right::before {
   content: " ";
   height: 0;
@@ -134,8 +121,6 @@ footer > .container-fluid {
   border-width: 10px 10px 10px 0;
   border-color: transparent white transparent transparent;
 }
-
-/* Fix the circle for containers on the right side */
 .timeline-right::after {
   left: -12px;
 }
@@ -147,18 +132,20 @@ footer > .container-fluid {
   position: relative;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
+/* Media queries - Responsive timeline on screens less than 800px wide */
 @media screen and (max-width: 800px) {
   /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
   }
+
   /* Full-width containers */
   .timeline-container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
+
   /* Make sure that all arrows are pointing leftwards */
   .timeline-container::before {
     left: 60px;
@@ -166,14 +153,15 @@ footer > .container-fluid {
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
   }
+
   /* Make sure all circles are at the same spot */
   .timeline-left::after,
-  .timeline-right::after {
+.timeline-right::after {
     left: 8px;
   }
+
   /* Make all right containers behave like the left ones */
   .timeline-right {
     left: 0%;
   }
 }
-/*# sourceMappingURL=main.css.map */
