--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 body {
-  font-family: "Noto Sans", sans-serif;
   overflow-x: hidden;
 }
 
@@ -14,15 +13,6 @@ main > .container-fluid {
 
 footer > .container-fluid {
   padding-top: 112px;
-}
-
-.form-control:focus {
-  outline: 0 !important;
-  box-shadow: none !important;
-}
-
-.btn:focus {
-  outline: 0 !important;
 }
 
 .zoom {
@@ -162,6 +152,6 @@ footer > .container-fluid {
 
   /* Make all right containers behave like the left ones */
   .timeline-right {
-    left: 0%;
+    left: 0;
   }
 }
