--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,5 +1,4 @@
 body
-  font-family: 'Noto Sans', sans-serif
   overflow-x: hidden
 
 header
@@ -11,14 +10,6 @@ main>.container-fluid
 
 footer > .container-fluid
   padding-top: 112px
-
-.form-control:focus
-  outline: 0 !important
-  -webkit-box-shadow: none !important
-  box-shadow: none !important
-
-.btn:focus
-  outline: 0 !important
 
 .zoom
   transition: transform .25s
@@ -154,5 +145,5 @@ footer > .container-fluid
 
   /* Make all right containers behave like the left ones */
   .timeline-right
-    left: 0%
+    left: 0
     
