--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -17,3 +17,7 @@ $font-family-sans-serif:
           // Emoji fonts
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 
+$blue:    #2E5EFF;
+$red:     #ee2f3f;
+
+$gray-900: #212529;
