--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,5 @@
+@import "./bootstrap/variables";
+
 body {
   overflow-x: hidden;
 }
@@ -13,6 +15,11 @@ main>.container-fluid{
 
 footer > .container-fluid{
   padding-top: 112px;
+}
+
+.reverse{
+  margin-top:-1px;
+  transform:rotate(180deg);
 }
 
 .zoom {
@@ -42,6 +49,18 @@ footer > .container-fluid{
 
 .blockquote-footer{
   margin-bottom: 0;
+}
+
+.wave-blue{
+  fill: $blue;
+}
+
+.wave-red{
+  fill: $red;
+}
+
+.wave-gray-900{
+  fill: $gray-900;
 }
 
 /* The actual timeline (the vertical ruler) */
