--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,10 @@
 *::-webkit-scrollbar {
   width: 12px;
 }
-
 *::-webkit-scrollbar-track {
   border-radius: 8px;
   background: transparent;
 }
-
 *::-webkit-scrollbar-thumb {
   border-radius: 8px;
   border: 2px solid transparent;
@@ -32,7 +30,7 @@ footer > .container-fluid {
 
 .scroll-below {
   background-color: rgba(255, 255, 255, 0.1);
-  transition: 0.3s;
+  transition: 0.25s;
 }
 .scroll-below:hover {
   transform: translateY(-4px);
@@ -161,35 +159,34 @@ footer > .container-fluid {
 }
 
 /* Media queries - Responsive timeline on screens less than 800px wide */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 760px) {
   /* Place the timelime to the left */
+  .timeline {
+    /* Full-width containers */
+    /* Make all right containers behave like the left ones */
+  }
   .timeline::after {
     left: 31px;
   }
-
-  /* Full-width containers */
   .timeline-container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
+    /* Make sure that all arrows are pointing leftwards */
   }
-
-  /* Make sure that all arrows are pointing leftwards */
   .timeline-container::before {
     left: 60px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
   }
+  .timeline-right {
+    left: 0;
+  }
 
   /* Make sure all circles are at the same spot */
   .timeline-left::after,
 .timeline-right::after {
     left: 8px;
-  }
-
-  /* Make all right containers behave like the left ones */
-  .timeline-right {
-    left: 0;
   }
 }
