--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,211 +1,215 @@
 @import "./bootstrap/variables";
 
-*::-webkit-scrollbar{
-  width: 12px;
-}
+* {
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
 
-*::-webkit-scrollbar-track{
-  border-radius: 8px;
-  background: transparent;
-}
+  &::-webkit-scrollbar-track {
+    border-radius: 8px;
+    background: transparent;
+  }
 
-*::-webkit-scrollbar-thumb{
-  border-radius: 8px;
-  border: 2px solid transparent;
-  background-color: $gray-400;
-    &:hover{
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid transparent;
+    background-color: $gray-400;
+
+    &:hover {
       background-color: $gray-300;
     }
-}
-
-
-body {
-  overflow-x: hidden;
-  overflow: overlay;
-}
-
-main>.container-fluid{
-  padding-top: 112px;
-  padding-bottom: 112px;
-}
-
-footer > .container-fluid{
-  padding-top: 112px;
-}
-
-.scroll-below{
-  background-color: rgb(255,255,255,.1);
-  transition: .25s;
-  &:hover{
-    transform: translateY(-4px);
   }
 }
 
-.reverse{
-  margin-top:-1px;
-  transform:rotate(180deg);
-}
 
-.zoom {
-  transition: transform .25s;
-
-  &:hover {
-    transform: scale(1.25);
+  body {
+    overflow-x: hidden;
+    overflow: overlay;
   }
-}
 
-.clickable{
-  cursor: pointer;
-}
+  main>.container-fluid{
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }
 
-.text-justify {
-  text-align: justify;
-}
+  footer > .container-fluid{
+    padding-top: 112px;
+  }
 
-.portfolio-img {
-  transition: .25s;
+  .scroll-below{
+    background-color: rgb(255,255,255,.1);
+    transition: .25s;
+    &:hover{
+      transform: translateY(-4px);
+    }
+  }
 
-  &:hover {
+  .reverse{
+    margin-top:-1px;
+    transform:rotate(180deg);
+  }
+
+  .zoom {
+    transition: transform .25s;
+
+    &:hover {
+      transform: scale(1.25);
+    }
+  }
+
+  .clickable{
     cursor: pointer;
-    transform: scale(1.1);
   }
-}
 
-.blockquote-footer{
-  margin-bottom: 0;
-}
+  .text-justify {
+    text-align: justify;
+  }
 
-.wave-blue{
-  fill: $blue;
-}
+  .portfolio-img {
+    transition: .25s;
 
-.wave-red{
-  fill: $red;
-}
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.1);
+    }
+  }
 
-.wave-gray-900{
-  fill: $gray-900;
-}
+  .blockquote-footer{
+    margin-bottom: 0;
+  }
 
-/* The actual timeline (the vertical ruler) */
-.timeline{
-  position: relative;
+  .wave-blue{
+    fill: $blue;
+  }
+
+  .wave-red{
+    fill: $red;
+  }
+
+  .wave-gray-900{
+    fill: $gray-900;
+  }
 
   /* The actual timeline (the vertical ruler) */
-  &::after{
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-  }
-
-
-  /* Container around content */
-  &-container {
-    padding: 10px 40px;
+  .timeline{
     position: relative;
-    background-color: inherit;
-    width: 50%;
 
-    /* The circles on the timeline */
-    &::after {
+    /* The actual timeline (the vertical ruler) */
+    &::after{
       content: '';
       position: absolute;
-      width: 24px;
-      height: 24px;
-      right: -12px;
+      width: 6px;
       background-color: white;
-      top: 15px;
-      border-radius: 50%;
-      z-index: 1;
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      margin-left: -3px;
+    }
+
+
+    /* Container around content */
+    &-container {
+      padding: 10px 40px;
+      position: relative;
+      background-color: inherit;
+      width: 50%;
+
+      /* The circles on the timeline */
+      &::after {
+        content: '';
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        right: -12px;
+        background-color: white;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+      }
+    }
+
+
+    /* Place the container to the left */
+    &-left {
+      left: 0;
+
+      /* Add arrows to the left container (pointing right) */
+      &::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 18px;
+        width: 0;
+        right: 30px;
+        border: medium solid white;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent white;
+      }
+    }
+
+    /* Place the container to the right */
+    &-right {
+      left: 50%;
+
+      /* Add arrows to the right container (pointing left) */
+      &::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 18px;
+        width: 0;
+        left: 30px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+      }
+
+      /* Fix the circle for containers on the right side */
+      &::after {
+        left: -12px;
+      }
     }
   }
 
-
-  /* Place the container to the left */
-  &-left {
-    left: 0;
-
-    /* Add arrows to the left container (pointing right) */
-    &::before {
-      content: " ";
-      height: 0;
-      position: absolute;
-      top: 18px;
-      width: 0;
-      right: 30px;
-      border: medium solid white;
-      border-width: 10px 0 10px 10px;
-      border-color: transparent transparent transparent white;
-    }
+  /* The actual content */
+  .content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
   }
 
-  /* Place the container to the right */
-  &-right {
-    left: 50%;
+  /* Media queries - Responsive timeline on screens less than 800px wide */
+  @media screen and (max-width: 760px){
 
-    /* Add arrows to the right container (pointing left) */
+    /* Place the timelime to the left */
+.timeline{
+  &::after {
+      left: 31px;
+    }
+
+  /* Full-width containers */
+  &-container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+
+    /* Make sure that all arrows are pointing leftwards */
     &::before {
-      content: " ";
-      height: 0;
-      position: absolute;
-      top: 18px;
-      width: 0;
-      left: 30px;
+      left: 60px;
       border: medium solid white;
       border-width: 10px 10px 10px 0;
       border-color: transparent white transparent transparent;
     }
+  }
 
-    /* Fix the circle for containers on the right side */
-    &::after {
-      left: -12px;
+    /* Make all right containers behave like the left ones */
+    &-right{
+      left: 0;
     }
   }
-}
-
-/* The actual content */
-.content {
-  padding: 20px 30px;
-  background-color: white;
-  position: relative;
-}
-
-/* Media queries - Responsive timeline on screens less than 800px wide */
-@media screen and (max-width: 800px){
-
-  /* Place the timelime to the left */
-  .timeline::after {
-    left: 31px;
-  }
-
-  /* Full-width containers */
-  .timeline-container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-  }
-
-  /* Make sure that all arrows are pointing leftwards */
-  .timeline-container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-
-  /* Make sure all circles are at the same spot */
-  .timeline-left::after,
-  .timeline-right::after {
-    left: 8px;
-  }
-
-  /* Make all right containers behave like the left ones */
-  .timeline-right{
-    left: 0;
-  }
+    /* Make sure all circles are at the same spot */
+    .timeline-left::after,
+    .timeline-right::after {
+      left: 8px;
+    }
 }
