--- a/src/sass/bootstrap/_variables.scss
+++ b/src/sass/bootstrap/_variables.scss
@@ -34,3 +34,12 @@ $black:    #000;
 
 $light:    $gray-100;
 $dark:     $gray-900;
+
+$position-values: (
+    0: 0,
+    10: 10px,
+    25: 25px,
+    50: 50px,
+    75: 75px,
+    100: 100px,
+);
