--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -95,7 +95,7 @@
     position: relative;
 
     /* The actual timeline (the vertical ruler) */
-    &::after{
+    &::after {
       content: '';
       position: absolute;
       width: 6px;
@@ -106,6 +106,16 @@
       margin-left: -3px;
     }
 
+    &.darkmode-enabled::after {
+      content: '';
+      position: absolute;
+      width: 6px;
+      background-color: $dark;
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      margin-left: -3px;
+    }
 
     /* Container around content */
     &-container {
@@ -122,6 +132,18 @@
         height: 24px;
         right: -12px;
         background-color: white;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+      }
+
+      &.darkmode-enabled::after{
+        content: '';
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        right: -12px;
+        background-color: $dark;
         top: 15px;
         border-radius: 50%;
         z-index: 1;
@@ -145,6 +167,17 @@
         border-width: 10px 0 10px 10px;
         border-color: transparent transparent transparent white;
       }
+      &.darkmode-enabled::before{
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 18px;
+        width: 0;
+        right: 30px;
+        border: medium solid $dark;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent $dark;
+      }
     }
 
     /* Place the container to the right */
@@ -164,6 +197,18 @@
         border-color: transparent white transparent transparent;
       }
 
+      &.darkmode-enabled::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 18px;
+        width: 0;
+        left: 30px;
+        border: medium solid $dark;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $dark transparent transparent;
+      }
+
       /* Fix the circle for containers on the right side */
       &::after {
         left: -12px;
@@ -176,40 +221,115 @@
     padding: 20px 30px;
     background-color: white;
     position: relative;
+
+    &.darkmode-enabled{
+      background-color: $dark !important;
+    }
   }
 
-  /* Media queries - Responsive timeline on screens less than 800px wide */
-  @media screen and (max-width: 760px){
+/* Media queries - Responsive timeline on screens less than 800px wide */
+@media screen and (max-width: 760px){
 
     /* Place the timelime to the left */
-.timeline{
-  &::after {
+  .timeline{
+    &::after {
       left: 31px;
     }
 
-  /* Full-width containers */
-  &-container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    /* Full-width containers */
+    &-container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
 
-    /* Make sure that all arrows are pointing leftwards */
-    &::before {
+      /* Make sure that all arrows are pointing leftwards */
+      &::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+      }
+
+      &.darkmode-enabled::before{
+        left: 60px;
+        border: medium solid $dark;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $dark transparent transparent;
+      }
+    }
+
+      /* Make all right containers behave like the left ones */
+      &-right{
+        left: 0;
+      }
+  }
+  /* Make sure all circles are at the same spot */
+  .timeline-left::after,
+  .timeline-right::after {
+    left: 8px;
+  }
+
+  @media screen and (prefers-color-scheme: dark) {
+    .timeline-container::before.darkmode-auto{
       left: 60px;
-      border: medium solid white;
+      border: medium solid $dark;
       border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
+      border-color: transparent $dark transparent transparent;
     }
   }
+}
 
-    /* Make all right containers behave like the left ones */
-    &-right{
-      left: 0;
+@media screen and (prefers-color-scheme: dark) {
+  .darkmode-auto {
+    &.content {
+      background-color: $dark !important;
+    }
+
+    &.timeline {
+      &::after {
+        content: '';
+        position: absolute;
+        width: 6px;
+        background-color: $dark;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -3px;
+      }
+
+      &-container::after {
+        content: '';
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        right: -12px;
+        background-color: $dark;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+      }
+      &-left::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 18px;
+        width: 0;
+        right: 30px;
+        border: medium solid $dark;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent $dark;
+      }
+      &-right::before{
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 18px;
+        width: 0;
+        left: 30px;
+        border: medium solid $dark;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $dark transparent transparent;
+      }
     }
   }
-    /* Make sure all circles are at the same spot */
-    .timeline-left::after,
-    .timeline-right::after {
-      left: 8px;
-    }
 }
