--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,6 +211,9 @@ footer > .container-fluid {
     /* Full-width containers */
     /* Make all right containers behave like the left ones */
   }
+  .timeline.darkmode-enabled::after {
+    left: 31px;
+  }
   .timeline::after {
     left: 31px;
   }
@@ -242,14 +245,6 @@ footer > .container-fluid {
     left: 8px;
   }
 }
-@media screen and (max-width: 760px) and (prefers-color-scheme: dark) {
-  .timeline-container::before.darkmode-auto {
-    left: 60px;
-    border: medium solid #212529;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent #212529 transparent transparent;
-  }
-}
 @media screen and (prefers-color-scheme: dark) {
   .darkmode-auto.content {
     background-color: #212529 !important;
@@ -275,6 +270,12 @@ footer > .container-fluid {
     border-radius: 50%;
     z-index: 1;
   }
+  .darkmode-auto.timeline.-container::before {
+    left: 60px;
+    border: medium solid #212529;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #212529 transparent transparent;
+  }
   .darkmode-auto.timeline-left::before {
     content: " ";
     height: 0;
@@ -296,5 +297,39 @@ footer > .container-fluid {
     border: medium solid #212529;
     border-width: 10px 10px 10px 0;
     border-color: transparent #212529 transparent transparent;
+  }
+
+  /* Media queries - Responsive timeline on screens less than 800px wide */
+}
+@media screen and (prefers-color-scheme: dark) and (max-width: 760px) {
+  .darkmode-auto {
+    /* Place the timelime to the left */
+  }
+  .darkmode-auto.timeline {
+    /* Full-width containers */
+    /* Make sure all circles are at the same spot */
+  }
+  .darkmode-auto.timeline::after {
+    left: 31px;
+  }
+  .darkmode-auto.timeline-container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+    /* Make sure that all arrows are pointing leftwards */
+    /* Make all right containers behave like the left ones */
+  }
+  .darkmode-auto.timeline-container::before {
+    left: 60px;
+    border: medium solid #212529;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #212529 transparent transparent;
+  }
+  .darkmode-auto.timeline-container-right {
+    left: 0;
+  }
+  .darkmode-auto.timeline .timeline-left::after,
+.darkmode-auto.timeline .timeline-right::after {
+    left: 8px;
   }
 }
