--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -232,6 +232,9 @@
 
     /* Place the timelime to the left */
   .timeline{
+    &.darkmode-enabled::after{
+      left: 31px;
+    }
     &::after {
       left: 31px;
     }
@@ -268,15 +271,6 @@
   .timeline-right::after {
     left: 8px;
   }
-
-  @media screen and (prefers-color-scheme: dark) {
-    .timeline-container::before.darkmode-auto{
-      left: 60px;
-      border: medium solid $dark;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent $dark transparent transparent;
-    }
-  }
 }
 
 @media screen and (prefers-color-scheme: dark) {
@@ -308,6 +302,14 @@
         border-radius: 50%;
         z-index: 1;
       }
+
+      &.-container::before {
+        left: 60px;
+        border: medium solid $dark;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent $dark transparent transparent;
+      }
+
       &-left::before {
         content: " ";
         height: 0;
@@ -319,7 +321,8 @@
         border-width: 10px 0 10px 10px;
         border-color: transparent transparent transparent $dark;
       }
-      &-right::before{
+
+      &-right::before {
         content: " ";
         height: 0;
         position: absolute;
@@ -329,6 +332,43 @@
         border: medium solid $dark;
         border-width: 10px 10px 10px 0;
         border-color: transparent $dark transparent transparent;
+      }
+    }
+  }
+  /* Media queries - Responsive timeline on screens less than 800px wide */
+  @media screen and (max-width: 760px) {
+    .darkmode-auto {
+    /* Place the timelime to the left */
+      &.timeline {
+        &::after {
+          left: 31px;
+        }
+
+        /* Full-width containers */
+        &-container {
+          width: 100%;
+          padding-left: 70px;
+          padding-right: 25px;
+
+          /* Make sure that all arrows are pointing leftwards */
+          &::before {
+            left: 60px;
+            border: medium solid $dark;
+            border-width: 10px 10px 10px 0;
+            border-color: transparent $dark transparent transparent;
+          }
+
+          /* Make all right containers behave like the left ones */
+          &-right {
+            left: 0;
+          }
+        }
+
+        /* Make sure all circles are at the same spot */
+        .timeline-left::after,
+        .timeline-right::after {
+          left: 8px;
+        }
       }
     }
   }
